those terms shouldn't have been there in the first place

--- a/birth-death-mutation/BirthDeathMutation.tex
+++ b/birth-death-mutation/BirthDeathMutation.tex
@@ -168,17 +168,24 @@ the mutation kernel.
 We could partition the effects across birth and death rates differently,
 but I think of it as a birth rate limited by capacity, so I'll
 just write it that way. The population dynamics is driven by
-ecological parameters $r>0$ and $k>0$:
+ecological parameters $r>0$ and $k>0$.
+The adaptive dynamics version of this doesn't distinguish between
+birth and death components of the demographic model, and I guess
+it doesn't necessarily matter how we partition it, as long as they
+add up to $r(1-N(x)/k)$, so that a mutation-free system would
+tend to equilibrate around $N(t)=k$.
+One way is
 \begin{align*}
-	b(x,\mu) &= r(x) \left( 1 - \frac{N(t)}{k(x)} \right) = r(x) \left( 1 - \frac{\int_{\mathcal{S}} \mu(dx)}{k(x)} \right) \\
-	d(x,\mu) &= m
-	%b(\vartheta,\nu) = r(\vartheta) \left( 1 - \int_{\mathcal{E}} \nu(d\varsigma) / k(\vartheta) \\
-	%d(\vartheta,\nu) = 
+	b(x,\mu) &= r(x) \\
+	d(x,\mu) &= r(x) \frac{N(t)}{k(x)} = r(x) \frac{\int_{\mathcal{S}} \mu(dx)}{k(x)}.
 \end{align*}
+Let's assume $k$ values are well below the physically available space,
+so that there's no problem having as many births as needed, before
+they get weeded by mortality when population is large.
 
-The mutation kernel $K$ is left in general form.
 I don't care much what the mutation rate $\varepsilon$ is but let's make it
 constant to simplify.
+The mutation kernel $K$ is left in general form.
 
 The ``ecological phenotype'' of these creatures is the vector
 $\theta(x) := (r(x),k(x))$, and the hypothesis is that it's good to
@@ -187,83 +194,75 @@ consider the population dynamics to be in $\theta$ space.
 So what do we get? In $x$ space the evolution of a test function is
 \begin{align*}
 	\frac{d}{dt} \mathbb{E}\left\langle f, \mu_t \right\rangle 
-	&= \mathbb{E} \int_{\mathcal{S}} \mu_t(dx) \left[ (1-\varepsilon) \left( r(x) \left( 1 - \frac{\int_{\mathcal{S}} \mu_t(dx)}{k(x)} \right) - m \right) f(x) \right. \\
-	& \left. \qquad\mbox{} + \varepsilon r(x) \left( 1 - \frac{\int_{\mathcal{S}} \mu_t(dx)}{k(x)} \right) \int_{S} K(x,dy) f(y) \right] \\
-	&= \mathbb{E}\left\langle f, \left( (1-\varepsilon) b(x) \left(1 - \frac{\langle 1,\mu_t\rangle}{k(x)} \right) - m \right) \mu_t \right. \\
-	& \left. \qquad\mbox{} + \left\langle \varepsilon \left( 1 - \frac{\langle 1,\mu_t\rangle}{k(x)} \right) K(\cdot), \mu_t \right\rangle \right\rangle .
+	&= \mathbb{E} \int_{\mathcal{S}} \mu_t(dx) \left[ (1-\varepsilon) r(x) \left( 1 - \frac{\int_{\mathcal{S}} \mu_t(dx)}{k(x)} \right) f(x) 
+	 + \varepsilon\,r(x) \int_{S} K(x,dy) f(y) \right] \\
+	&= \mathbb{E}\left\langle f, (1-\varepsilon) r(x) \left(1 - \frac{\langle 1,\mu_t\rangle}{k(x)} \right) \mu_t + \left\langle \varepsilon r(x) K(\cdot), \mu_t \right\rangle \right\rangle .
 \end{align*}
 %
 In $\theta$ space it's
 \begin{align*}
 	\frac{d}{dt} \mathbb{E}\left\langle \phi, \theta_{*}\mu_t \right\rangle
-	&= \mathbb{E} \iint \phi(r,k) \left[ (1-\varepsilon)
-		\left( r \left( 1 - \frac{\iint \theta_{*}\mu_t(dr,dk)}{k} \right) - m \right) \right. \\
-	& \left. \qquad\mbox{} + \varepsilon\, r \left( 1 - \frac{\iint \theta_{*}\mu_t(dr,dk)}{k} \right) \iint \phi(r',k')\, \theta_{*}K(\theta^{-1}(r,k),(dr',dk')) \right] \theta_{*}\mu_t(dr,dk) \\
-	&= \mathbb{E}\left\langle \phi, 
-		(1-\varepsilon) \left( r \left( 1 - \frac{\langle 1,\theta_{*}\mu_t\rangle}{k} \right) - m \right) \theta_*{\mu_t} \right. \\
-	& \left. \qquad\mbox{} + \left\langle \varepsilon\, r \left( 1 - \frac{\langle 1,\theta_{*}\mu_t\rangle}{k} \right) \theta_{*}K(\theta^{-1}(\cdot)), \theta_{*}\mu_t \right\rangle \right\rangle .
+	&= \mathbb{E} \iint \left[ \phi(r,k) (1-\varepsilon)
+		r \left( 1 - \frac{\iint \theta_{*}\mu_t(dr,dk)}{k} \right) \right. \\
+	& \left. \qquad\mbox{} + \varepsilon\, r \iint \phi(r',k')\, \theta_{*}K(\theta^{-1}(r,k),(dr',dk')) \right] \theta_{*}\mu_t(dr,dk) \\
+	&= \mathbb{E}\left\langle \phi,
+		(1-\varepsilon) r \left( 1 - \frac{\langle 1,\theta_{*}\mu_t\rangle}{k} \right) \theta_*{\mu_t}
+		+ \varepsilon \left\langle r\,\theta_{*}K(\theta^{-1}(\cdot)), \theta_{*}\mu_t \right\rangle \right\rangle .
 \end{align*}
 
 To ask where evolution is likely to go in this system, we can ask what types
 are expected to increase, by using say a test functional $\delta_z$
 at a type $z$,
-with ecological type $(r_z,k_z)=\theta(z)$ and 
-$\delta_{(r_z,k_z)}=\theta_*\delta_z$.
-The expected growth in $z$ is
+with ecological phenotype $(r_z,k_z)=\theta(z)$% and $\delta_{(r_z,k_z)}=\theta_*\delta_z$
+.
+The expected growth in $\delta_z(\mu)$ is
 \begin{align*}
-	(1-\varepsilon) \left( r_z \left( 1 - \frac{\int_{\mathcal{S}} \mu_t(dx)}{k_z} \right) - m \right) + \varepsilon \int_{\mathcal{S}}\int_{\mathcal{S}}  r(y) \left( 1 - \frac{\int_{\mathcal{S}} \mu_t(dx')}{k(y)} \right) K(y,dx) \delta_z(x) \mu_t(dy).
+	(1-\varepsilon) r_z \left( 1 - \frac{\int_{\mathcal{S}} \mu_t(dx)}{k_z} \right) + \varepsilon \int_{\mathcal{S}}\int_{\mathcal{S}}  r(y) K(y,dx) \delta_z(x) \mu_t(dy).
 \end{align*}
-This can be positive if 
-\[ r_z \left( 1 - \frac{\int_{\mathcal{S}} \mu_t(dx)}{k_z} \right) - m > 0, \]
-\emph{i.e.}\ if $k_z$ is bigger than the current population and $r_z$ is
-sufficiently large,
-or if there is significant influx of mutants to type $z$, or both.
+This will be positive if $k_z>N(t)$,
+%\[ r_z \left( 1 - \frac{\int_{\mathcal{S}} \mu_t(dx)}{k_z} \right) - m > 0, \]
+%\emph{i.e.}\ if $k_z$ is bigger than the current population and $r_z$ is
+%sufficiently large,
+or if there is sufficient influx of mutants to type $z$.
 
 Let's look at the evolution of $r$ and $k$ by using their projections
-$\pi_r(r,k)=r$, $\pi_k(r,k)=k$, with the $\theta$-space Price equation:
+$\pi_r(r,k)=r$, $\pi_k(r,k)=k$, with the $\theta$-space Price equation.
+Starting with $r$,
 \begin{align*}
 	\frac{d}{dt}\mathbb{E}\left\langle \pi_r, \theta_{*}\mu_t \right\rangle
-	&= (1-\varepsilon) \left\langle r, \left( r \left( 1 - \frac{\langle 1, \theta_*{\mu_t}\rangle}{k} \right) - m \right) \theta_*\mu_t \right\rangle \\
-	& \qquad\mbox{} + \varepsilon \left\langle r, \left\langle \left( r \left( 1 - \frac{\langle 1, \theta_*{\mu_t}\rangle}{k} \right) - m \right) \theta_*K(\theta^{-1}(\cdot)), \theta_{*}\mu_t \right\rangle \right\rangle \\
-%	&= (1-\varepsilon) \left\langle r^2 \left( 1 - \frac{N(t)}{k} \right) - r\,m, \theta_*\mu_t \right\rangle \\
-%	& \qquad\mbox{} + \varepsilon \left\langle r, \left\langle \left( r \left( 1 - \frac{N(t)}{k} \right) - m \right) \theta_*K(\theta^{-1}(\cdot)), \theta_{*}\mu_t \right\rangle \right\rangle \\
+	&= (1-\varepsilon) \left\langle r, r \left( 1 - \frac{\langle 1, \theta_*{\mu_t}\rangle}{k} \right) \theta_*\mu_t \right\rangle 
+		+ \varepsilon \left\langle r, \left\langle r\,\theta_*K(\theta^{-1}(\cdot)), \theta_{*}\mu_t \right\rangle \right\rangle.
 \end{align*}
-%Let $r=mk/(k-N(t))+r'$, so that
-%\[ r\left( 1 - \frac{N(t)}{k} \right) - m = r' \left( 1 - \frac{N(t)}{k} \right). \]
-%Then we can write
-%\begin{align*}
-%	\frac{d}{dt}\mathbb{E}\left\langle \pi_r, \theta_{*}\mu_t \right\rangle
-%	&= (1-\varepsilon) \left\langle r, r' \left( 1 - \frac{\langle 1, \theta_*{\mu_t}\rangle}{k} \right) \theta_*\mu_t \right\rangle \\
-%	& \qquad\mbox{} + \varepsilon \left\langle r, \left\langle r' \left( 1 - \frac{\langle 1, \theta_*{\mu_t}\rangle}{k} \right) \theta_*K(\theta^{-1}(\cdot)), \theta_{*}\mu_t \right\rangle \right\rangle \\
-%\end{align*}
-The first term of this reflects correlation between $r$ and the
-fitness function,
+The first term of this describes correlation between $r^2$ and the
+sign of $k-N(t)$,
+which can be read as selection for whatever $r$ is found where $k>N$,
 and the second reflects correlation between the $r$ of 
-mutant children and the parent's fitness function.
-The fitness function is positive when $k>N(t)$ and $r$ is sufficiently
-large.
+parents and of their mutant children.
 
 Now the same treatment for $k$:
 \begin{align*}
 	\frac{d}{dt}\mathbb{E}\left\langle \pi_k, \theta_{*}\mu_t \right\rangle
-	&= (1-\varepsilon) \left\langle k, \left( r \left( 1 - \frac{\langle 1, \theta_*{\mu_t}\rangle}{k} \right) - m \right ) \theta_*\mu_t \right\rangle \\
-	& \qquad\mbox{} + \varepsilon \left\langle k, \left\langle \left( r \left( 1 - \frac{\langle 1, \theta_*{\mu_t}\rangle}{k} \right) - m \right) \theta_*K(\theta^{-1}(\cdot)), \theta_{*}\mu_t \right\rangle \right\rangle \\
-%	&= (1-\varepsilon) \left\langle r (k - N(t)) - m\,k, \theta_*\mu_t \right\rangle \\
-%	& \qquad\mbox{} + \varepsilon \left\langle k, \left\langle \frac{r \left( k - N(t) \right)}{k} \theta_*K(\theta^{-1}(\cdot)), \theta_{*}\mu_t \right\rangle \right\rangle .
+	&= (1-\varepsilon) \left\langle k, r \left( 1 - \frac{\langle 1, \theta_*{\mu_t}\rangle}{k} \right) \theta_*\mu_t \right\rangle 
+		+ \varepsilon \left\langle k, \left\langle r\,\theta_*K(\theta^{-1}(\cdot)), \theta_{*}\mu_t \right\rangle \right\rangle \\
+	&= (1-\varepsilon) \left\langle r ( k - N(t) ), \theta_*\mu_t \right\rangle 
+		+ \varepsilon \left\langle k, \left\langle r\,\theta_*K(\theta^{-1}(\cdot)), \theta_{*}\mu_t \right\rangle \right\rangle .
 \end{align*}
+Here I think the first term can be read as selection for $k>N(t)$,
+and the second is the $k$ values produced by mutation.
+
 In the adaptive dynamics version, when we take the gradient
 of the invasion fitness at resident equilibrium with respect to
 $r$ and $k$, we find the $r$ component vanishes and the $k$
 component is positive.
-I'm not seeing a corresponding effect here.
+I'm seeing something like that here, though not exactly the same.
 
 One consideration is that selection on $r$ doesn't vanish
 when you don't separate timescales so that selection is evaluated
 at $N(t)\equiv k$.
 When $N$ is away from equilibrium, $r$ can be selected,
-in fact if $N$ happens to fall close to 0 we would transition
+in fact if $N$ happens to drift toward 0 we would transition
 from $K$-selection to the classic $r$-selection scenario.
-The fitness effect of $k$ must also fluctuate with the population size:
+The selection on $k$ must also fluctuate with the population size:
 it must be bigger than whatever the current $N$ is, but
 when $N$ happens to be below the resident $k$,
 this could allow values of $k$ smaller than the resident to be selected.
@@ -273,14 +272,14 @@ rather than the $x$ space?
 If I shift to $x$ space it's
 \begin{align*}
 	\frac{d}{dt}\mathbb{E}\left\langle k, \mu_t \right\rangle
-	&= (1-\varepsilon) \left\langle k, \left( r(x) \left( 1 - \frac{\langle 1,\mu_t\rangle}{k(x)} \right) - m \right) \mu_t \right\rangle \\
-	& \qquad\mbox{} + \varepsilon \left\langle k, \left\langle \left( r(x) \left( 1 - \frac{\langle 1, \mu_t\rangle}{k(x)} \right) - m \right) K(\cdot), \mu_t \right\rangle \right\rangle,
+	&= (1-\varepsilon) \left\langle k, r(x) \left( 1 - \frac{\langle 1,\mu_t\rangle}{k(x)} \right) \mu_t \right\rangle 
+		+ \varepsilon \left\langle k, \left\langle r(x)\, K(\cdot), \mu_t \right\rangle \right\rangle,
 \end{align*}
 which pretty much does the same work. 
-Maybe Price's equation handles a lot of
+Maybe the Price equation handles a lot of
 the coordinate transforming that I have needed to do explicitly for the
 gradient analysis.
-I might need to look at how or whether the gradient part of the
+I might need to look at how exactly the gradient part of the
 canonical adaptive dynamics equation is obtained from a
 limit of the Price equation -- maybe that's a better way of
 looking at all this, with the chain rule piece as a corollary.
